--- a/src/app/patient/home-patient/home-patient.page.html
+++ b/src/app/patient/home-patient/home-patient.page.html
@@ -5,5 +5,18 @@
 </ion-header>
 
 <ion-content>
+  <body>
 
+  <img style="margin-top: -15%; margin-bottom: -15%;" src="../../assets/logo/mediApp.png" />
+
+  <div class="mx-auto" style="width: 75px;">
+    <button type="button" class="btn btn-danger btn-lg">Perfil</button>
+  </div>
+
+
+
+  <div class="mx-auto" style="width: 95px;">
+    <button type="button" class="btn btn-danger btn-lg">Recetas</button>
+  </div>
+  </body>
 </ion-content>
